--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
         <li>Desktop development</li>
         <li>Video Sport development</li>
         <li>Mobile development</li>
-        <li>App development</li>
+        <li>Web development</li>
     </ul>
     <script type="text/javascript" src="./script.js">
 </script>
